--- a/calcStyle.css
+++ b/calcStyle.css
@@ -43,12 +43,12 @@ q:before, q:after {
 }
 
 #calculatorContainer {
-    width: 180px;
-    margin: 20px 0 0 20px;
-    padding: 10px;
+    max-width: 20em;
+    margin: 5px 0 0 5px;
+    padding: 0.8em;
     border: 1px solid darkgrey;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 12px;
     overflow: hidden;
 
     background: #eeeeee; /* Old browsers */
@@ -63,10 +63,11 @@ q:before, q:after {
 }
 
 .calculator__screen {
-    width: 8em;
-    margin-bottom: 10px;
-    font-size: 1.2em;
+    width: 100%;
+    margin-bottom: 0.3em;
+    font-size: 2.75em;
     border-radius: 3px;
+    text-align: left;
     background-color: ghostwhite;
 }
 
@@ -78,12 +79,18 @@ q:before, q:after {
     cursor: pointer;
 }
 
+#calculatorContainer table {
+    width: 100%;
+}
+
 #calculatorContainer table button {
-    width: 3em;
-    height: 2.5em;
+    width: 100%;
+    padding: 0.5em;
+    font-size: 1.5em;
 }
 
 #calculatorContainer button[data-key='_performEqually'] {
-    width: 12em;
-    height: 2.5em;
+    width: 100%;
+    padding: 0.5em;
+    font-size: 1.5em;
 }
